--- a/app/src/main/res/navigation/nav_spells.xml
+++ b/app/src/main/res/navigation/nav_spells.xml
@@ -2,21 +2,17 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_equipments"
-    app:startDestination="@id/equipmentsFragment">
+    android:id="@+id/nav_spells"
+    app:startDestination="@id/spellsFragment">
 
     <fragment
-        android:id="@+id/equipmentsFragment"
+        android:id="@+id/spellsFragment"
         android:name="br.com.cwi.tcc_android.presentation.feature.compendium.spells.spellsList.SpellsFragment"
         android:label="fragment_spell"
-        tools:layout="@layout/fragment_spells">
-        <action
-            android:id="@+id/action_spellsFragment_to_spellDetailFragment"
-            app:destination="@id/equipmentDetailFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_spells" />
 
     <fragment
-        android:id="@+id/equipmentDetailFragment"
+        android:id="@+id/spellDetailFragment"
         android:name="br.com.cwi.tcc_android.presentation.feature.compendium.spells.spellDetail.SpellDetailFragment"
         android:label="fragment_spell_detail"
         tools:layout="@layout/fragment_spell_detail" />
